// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@supports queries snapshot tests > should eliminate impossible @supports combinations 1`] = `
[
  {
    "atRules": [
      "@supports (not selector(:has(*))) and (display: grid)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid) and selector(:has(*))",
    ],
    "declarations": "display: flex;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "display: inline-block;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should keep the not-supported path free of guarded feature queries 1`] = `
[
  {
    "atRules": [
      "@supports (not (container-type: scroll-state))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@container (not scroll-state(scrolled: block-end))",
      "@supports (container-type: scroll-state)",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@container scroll-state(scrolled: block-end)",
      "@supports (container-type: scroll-state)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports combined with @container 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@container (not (width <= 400px))",
      "@supports (display: grid)",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@container (width <= 400px)",
      "@supports (display: grid)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports combined with @media 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@media (not (width <= 768px))",
      "@supports (display: grid)",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@media (width <= 768px)",
      "@supports (display: grid)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports combined with AND 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (not selector(:has(*))) and (display: grid)",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid) and selector(:has(*))",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports combined with OR 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: flex)) and (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid)",
    ],
    "declarations": "display: flex;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (not (display: grid)) and (display: flex)",
    ],
    "declarations": "display: flex;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports feature query 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports selector query 1`] = `
[
  {
    "atRules": [
      "@supports (not selector(:has(*)))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports selector(:has(*))",
    ],
    "declarations": "display: flex;",
    "selector": ".component",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports with modifier - 2 exclusive rules 1`] = `
[
  {
    "atRules": [
      "@supports (not selector(:has(*)))",
    ],
    "declarations": "display: block;",
    "selector": ".demo",
  },
  {
    "atRules": [
      "@supports selector(:has(*))",
    ],
    "declarations": "display: block;",
    "selector": ".demo:where(:not(:has(> [data-element="Icon"])))",
  },
  {
    "atRules": [
      "@supports selector(:has(*))",
    ],
    "declarations": "display: grid;",
    "selector": ".demo:where(:has(> [data-element="Icon"]))",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports with modifiers 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: grid))",
    ],
    "declarations": "color: black;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid)",
    ],
    "declarations": "color: black;",
    "selector": ".component:where(:not([data-hovered]))",
  },
  {
    "atRules": [
      "@supports (display: grid)",
    ],
    "declarations": "color: blue;",
    "selector": ".component:where([data-hovered])",
  },
]
`;

exports[`@supports queries snapshot tests > should render @supports with multiple modifier states - 3 exclusive rules 1`] = `
[
  {
    "atRules": [
      "@supports (not selector(:has(*)))",
    ],
    "declarations": "display: block;",
    "selector": ".demo",
  },
  {
    "atRules": [
      "@supports selector(:has(*))",
    ],
    "declarations": "display: flex;",
    "selector": ".demo:where(:not(:has(> [data-element="Icon"])))",
  },
  {
    "atRules": [
      "@supports selector(:has(*))",
    ],
    "declarations": "display: grid;",
    "selector": ".demo:where(:has(> [data-element="Icon"]))",
  },
]
`;

exports[`@supports queries snapshot tests > should render multiple @supports with exclusive logic 1`] = `
[
  {
    "atRules": [
      "@supports (not (display: flex)) and (not (display: grid))",
    ],
    "declarations": "display: block;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (not (display: grid)) and (display: flex)",
    ],
    "declarations": "display: flex;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@supports (display: grid)",
    ],
    "declarations": "display: grid;",
    "selector": ".component",
  },
]
`;

exports[`_ fallback floor > persists the floor alongside a "" default and other states 1`] = `
[
  {
    "declarations": "color: gray;",
    "selector": ".btn",
  },
  {
    "declarations": "color: black;",
    "selector": ".btn:where(:not([data-pressed]))",
  },
  {
    "declarations": "color: red;",
    "selector": ".btn:where([data-pressed])",
  },
]
`;

exports[`_ fallback floor > should emit a bare default + positive override for the scroll-state case 1`] = `
[
  {
    "declarations": "inset: 0 auto auto auto;",
    "selector": ".component",
  },
  {
    "atRules": [
      "@container scroll-state(scrolled: block-end)",
      "@supports (container-type: scroll-state)",
    ],
    "declarations": "inset: -10px auto auto auto;",
    "selector": ".component",
  },
]
`;
